# Checkers

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp  util.cpp  util.hpp
src/gui/: scene.hpp  ts_deque.hpp  window.cpp  window.hpp
src/gui/scenes/: config.cpp  config.hpp  game.cpp  game.hpp  game_over.cpp  game_over.hpp
src/gui/scenes/buttons/: choice_button.hpp  proceed_button.hpp
src/gui/templates/: button.cpp  button.hpp
src/interface/: board.cpp  board.hpp  checkers.cpp  checkers.hpp  exceptions.hpp  move.cpp  move.hpp  piece.hpp  position.hpp  space.hpp
src/interface/pieces/: king.cpp  man.cpp  pieces.cpp
src/player/: human.hpp  player.hpp
src/player/bot/: bot.hpp
src/player/bot/calculating_bot/: calculating_bot.cpp  calculating_bot.hpp
src/player/bot/human_bot/: human_bot.cpp  human_bot.hpp
src/player/bot/random_bot/: random_bot.hpp
src/player/bot/testing_bot/: testing_bot.cpp  testing_bot.hpp
